exports[`test Note renders correctly 1`] = `
<div>
   Loading Note 
</div>
`;

exports[`test Note renders correctly 2`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div>
     Loading Note 
</div>,
  "nodes": Array [
    <div>
       Loading Note 
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance":  {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Note
        instrumentName="acoustic_grand_piano"
        name="A3"
        onNoteLoaded={[Function]}
        play={false}>
        <div>
                Note container
        </div>
</Note>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Note {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "onClickStart": [Function],
        "playingBuffers": Array [],
        "props": Object {
          "children": <div>
            Note container
</div>,
          "instrumentName": "acoustic_grand_piano",
          "name": "A3",
          "onNoteLoaded": [Function],
          "play": false,
        },
        "refs": Object {},
        "startPlayingNote": [Function],
        "state": Object {
          "isLoading": true,
          "isPlaying": false,
        },
        "stopPlayingNote": [Function],
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div>
           Loading Note 
</div>,
        "_debugID": 2,
        "_renderedOutput": <div>
           Loading Note 
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Note
    instrumentName="acoustic_grand_piano"
    name="A3"
    onNoteLoaded={[Function]}
    play={false}>
    <div>
        Note container
    </div>
</Note>,
}
`;

exports[`test Note renders correctly 3`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div>
     Loading Note 
</div>,
  "nodes": Array [
    <div>
       Loading Note 
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance":  {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Note
        instrumentName="acoustic_grand_piano"
        name="A3"
        onNoteLoaded={[Function]}
        play={true}>
        <div>
                Note container
        </div>
</Note>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Note {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "onClickStart": [Function],
        "playingBuffers": Array [],
        "props": Object {
          "children": <div>
            Note container
</div>,
          "instrumentName": "acoustic_grand_piano",
          "name": "A3",
          "onNoteLoaded": [Function],
          "play": true,
        },
        "refs": Object {},
        "startPlayingNote": [Function],
        "state": Object {
          "isLoading": true,
          "isPlaying": true,
        },
        "stopPlayingNote": [Function],
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div>
           Loading Note 
</div>,
        "_debugID": 2,
        "_renderedOutput": <div>
           Loading Note 
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Note
    instrumentName="acoustic_grand_piano"
    name="A3"
    onNoteLoaded={[Function]}
    play={true}>
    <div>
        Note container
    </div>
</Note>,
}
`;
